# prototypical

./: README.md  TODO
fastapi-vue/: docker-compose.yml
fastapi-vue/services/backend/: Dockerfile
fastapi-vue/services/backend/src/: main.py
fastapi-vue/services/backend/src/crud/: notes.py  users.py
fastapi-vue/services/backend/src/database/: config.py
fastapi-vue/services/backend/src/schemas/: users.py
fastapi-vue/services/frontend/: package-lock.json  package.json
fastapi-vue/services/frontend/src/: App.vue  main.js
fastapi-vue/services/frontend/src/router/: index.js
fastapi-vue/services/frontend/src/store/: index.js
fastapi-vue/services/frontend/src/views/: EditNoteView.vue  Home2View.vue  LoginView.vue  NoteView.vue  ProfileView.vue  RegisterView.vue
fastapi_vue/: README.md
fastapi_vue/services/backend/: Dockerfile  logging.conf  pyproject.toml  tox.ini
fastapi_vue/services/backend/src/: loggingservice.py  main.py
fastapi_vue/services/backend/src/auth/: jwthandler.py
fastapi_vue/services/backend/src/crud/: notes.py  users.py
fastapi_vue/services/backend/src/routes/: notes.py  users.py
fastapi_vue/services/backend/src/schemas/: notes.py
fastapi_vue/services/backend/tests/: test_fastapi_vue_version.py
fastapi_vue/services/frontend/: Dockerfile  package.json
fastapi_vue/services/frontend/src/: App.vue  main.js
fastapi_vue/services/frontend/src/components/: HelloWorld.vue  NavBar.vue
fastapi_vue/services/frontend/src/store/modules/: notes.js  users.js
fastapi_vue/services/frontend/src/views/: DashboardView.vue
tiangolo-fastapi-vue/: .env-common  .gitlab-ci.yml  README.md  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
tiangolo-fastapi-vue/backend/: backend.dockerfile  celeryworker.dockerfile
tiangolo-fastapi-vue/backend/app/: pyproject.toml
tiangolo-fastapi-vue/backend/app/app/crud/: crud_user.py
tiangolo-fastapi-vue/scripts/: build-dev.sh  build-prod.sh  clean-ALL.sh  clean.sh  run-dev.sh
