[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
aerich = "0.5.5"
asyncpg = "0.23.0"
bcrypt = "3.2.0"
fastapi = "0.68.0"
passlib = "1.7.4"
python-jose = "3.3.0"
python-multipart = "0.0.5"
tortoise-orm = "0.17.6"
uvicorn = "0.14.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
tox = "^3.25.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
