[tool.poetry]
authors = ["Admin <admin@example.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "*"
celery = "*"
emails = "*"
fastapi = "*"
gunicorn = "*"
jinja2 = "*"
passlib = {extras = ["bcrypt"], version = "*"}
psycopg2-binary = "*"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
pytest = "*"
python = "^3.9"
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
raven = "*"
requests = "^*"
sqlalchemy = "*"
tenacity = "*"
uvicorn = "*"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
sqlalchemy-stubs = "*"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

